# ScheduleSync

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/: ci.yml
.github/workflows/: .pylintrc  ci.yml  pylint.yml  release.yml
schedulesync/: __init__.py  alembic.ini  employee.py  main.py  occupation.py  policy.py  routes.py  schedule.py  shift.py  timetable.py
schedulesync/core/: base.py  service.py  settings.py
schedulesync/core/auth/: auth.py  db.py  manager.py
schedulesync/core/models/: db.py  models.py
schedulesync/core/schemas/: schema.py
schedulesync/migrations/: env.py
schedulesync/migrations/versions/: 646600f2031a_updated_models.py  8e03b213edc1_updated_models.py
tests/: test_main.py
