[tool.poetry]
name = "schedulesync"
version = "0.1.0"
description = ""
authors = ["ahzees <matviy.stets@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.10"
fastapi = "^0.89.1"
typer = "^0.7.0"
pre-commit = "^3.0.4"

[tool.poetry.group.dev.dependencies]
requests = "^2.28.2"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
